--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     border-style: solid;
     border-color: rgb(226, 232, 240);
 }
+
 a{
     text-decoration: inherit;
     color: inherit;
@@ -14,6 +15,7 @@ body{
     margin: 0px;
     line-height: inherit;
     padding: 24px;
+    font-family: Inter, system-ui;
 }
 p{
  line-height: 1.5;
